--- a/src/cascadia/WindowsTerminal/WindowsTerminal.vcxproj
+++ b/src/cascadia/WindowsTerminal/WindowsTerminal.vcxproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CA5CAD1A-1754-4A9D-93D7-857A9D17CB1B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -14,20 +15,24 @@
     <TargetPlatformIdentifier>Windows</TargetPlatformIdentifier>
     <PgoTarget>true</PgoTarget>
   </PropertyGroup>
+
   <PropertyGroup Label="NuGet Dependencies">
     <TerminalCppWinrt>true</TerminalCppWinrt>
     <TerminalThemeHelpers>true</TerminalThemeHelpers>
     <TerminalMUX>true</TerminalMUX>
     <TerminalWinGetInterop>true</TerminalWinGetInterop>
   </PropertyGroup>
+
   <Import Project="..\..\..\common.openconsole.props" Condition="'$(OpenConsoleDir)'==''" />
   <Import Project="$(OpenConsoleDir)src\common.nugetversions.props" />
   <Import Project="$(OpenConsoleDir)src\cppwinrt.build.pre.props" />
+
   <ItemDefinitionGroup>
     <ClCompile>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
   </ItemDefinitionGroup>
+
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>$(OpenConsoleDir)\src\inc;$(OpenConsoleDir)\dep;$(OpenConsoleDir)\dep\Console;$(OpenConsoleDir)\dep\Win32K;$(OpenConsoleDir)\dep\gsl\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
@@ -86,6 +91,7 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+
   <!-- Manually add a reference to Core here. We need this so MDMERGE will know
   where the Core types are defined. However, we need to do it exactly like this,
   because the Core project is a lib not a dll, so it can't be ProjectReference'd
@@ -110,6 +116,7 @@
   <PropertyGroup Label="Globals">
     <DebuggerFlavor>WindowsLocalDebugger</DebuggerFlavor>
   </PropertyGroup>
+
   <!--
   BODGY
 
@@ -126,7 +133,9 @@
       <GenerateWindowsMetadata>false</GenerateWindowsMetadata>
     </Link>
   </ItemDefinitionGroup>
+
   <Import Project="$(OpenConsoleDir)src\cppwinrt.build.post.props" />
+
   <!-- Override GetPackagingOutputs to roll up all our dependencies.
        This ensures that when the WAP packaging project asks what files go into
        the package, we tell it.
@@ -137,23 +146,37 @@
     <_ContinueOnError Condition="'$(BuildingProject)' != 'true'">false</_ContinueOnError>
   </PropertyGroup>
   <Target Name="GetPackagingOutputs" Returns="@(PackagingOutputs)">
-    <MSBuild Projects="@(ProjectReferenceWithConfiguration)" Targets="GetPackagingOutputs" BuildInParallel="$(BuildInParallel)" Properties="%(ProjectReferenceWithConfiguration.SetConfiguration); %(ProjectReferenceWithConfiguration.SetPlatform)" Condition="'@(ProjectReferenceWithConfiguration)' != ''&#xD;&#xA;                 and '%(ProjectReferenceWithConfiguration.BuildReference)' == 'true'&#xD;&#xA;                 and '%(ProjectReferenceWithConfiguration.ReferenceOutputAssembly)' == 'true'" ContinueOnError="$(_ContinueOnError)">
-      <Output TaskParameter="TargetOutputs" ItemName="_PackagingOutputsFromOtherProjects" />
+    <MSBuild
+      Projects="@(ProjectReferenceWithConfiguration)"
+      Targets="GetPackagingOutputs"
+      BuildInParallel="$(BuildInParallel)"
+      Properties="%(ProjectReferenceWithConfiguration.SetConfiguration); %(ProjectReferenceWithConfiguration.SetPlatform)"
+      Condition="'@(ProjectReferenceWithConfiguration)' != ''
+                 and '%(ProjectReferenceWithConfiguration.BuildReference)' == 'true'
+                 and '%(ProjectReferenceWithConfiguration.ReferenceOutputAssembly)' == 'true'"
+      ContinueOnError="$(_ContinueOnError)">
+      <Output TaskParameter="TargetOutputs" ItemName="_PackagingOutputsFromOtherProjects"/>
     </MSBuild>
+
     <ItemGroup>
       <PackagingOutputs Include="@(_PackagingOutputsFromOtherProjects)" />
     </ItemGroup>
+
   </Target>
+
   <PropertyGroup>
     <PrepareForRunDependsOn Condition="'$(BuildingInsideVisualStudio)'=='true'">_WTPrepareUnpackagedLayoutForRun;$(PrepareForRunDependsOn)</PrepareForRunDependsOn>
   </PropertyGroup>
+
   <ItemGroup>
     <WTFullXamlAssets Include="$(OutDir)\_xaml\resources.pri" />
     <WTFullXamlAssets Include="$(OutDir)\_xaml\Microsoft.UI.Xaml.dll" />
   </ItemGroup>
   <Target Name="_GetFullFatXamlAssets" Inputs="@(AppxPackageRegistration)" Outputs="@(WTFullXamlAssets)">
     <ItemGroup>
-      <CurrentXamlPackage Include="@(AppxPackageRegistration)" Condition="'%(AppxPackageRegistration.Architecture)'=='$(Platform)' AND&#xD;&#xA;        $([System.String]::new('%(AppxPackageRegistration.Filename)').StartsWith('Microsoft.UI.Xaml'))" />
+      <CurrentXamlPackage Include="@(AppxPackageRegistration)"
+        Condition="'%(AppxPackageRegistration.Architecture)'=='$(Platform)' AND
+        $([System.String]::new('%(AppxPackageRegistration.Filename)').StartsWith('Microsoft.UI.Xaml'))" />
     </ItemGroup>
     <MakeDir Directories="$(OutDir)\_xaml" />
     <Exec Command="tar.exe -x -C &quot;$(OutDir)\_xaml&quot; -f &quot;@(CurrentXamlPackage)&quot;" />
@@ -163,7 +186,7 @@
       <Output TaskParameter="TargetOutputs" ItemName="WTPackagingOutputsFromDependencyProjects" />
     </CallTarget>
     <ItemGroup>
-      <DependencyPriFiles Include="@(WTPackagingOutputsFromDependencyProjects-&gt;Distinct())" Condition="'%(WTPackagingOutputsFromDependencyProjects.Extension)'=='.pri' and '%(WTPackagingOutputsFromDependencyProjects.Filename)'!='Microsoft.UI.Xaml'" />
+      <DependencyPriFiles Include="@(WTPackagingOutputsFromDependencyProjects->Distinct())" Condition="'%(WTPackagingOutputsFromDependencyProjects.Extension)'=='.pri' and '%(WTPackagingOutputsFromDependencyProjects.Filename)'!='Microsoft.UI.Xaml'"/>
       <DependencyPriFiles Include="@(WTFullXamlAssets)" Condition="'%(WTFullXamlAssets.Extension)'=='.pri'" />
       <DependencyExecutables Include="@(WTFullXamlAssets)" Condition="'%(WTFullXamlAssets.Extension)'=='.dll'" />
       <DependencyExecutables Include="$(OutDir)\..\OpenConsole.exe" />
@@ -174,6 +197,8 @@
     <Exec Command="pwsh.exe -noprofile -c &quot;$(OpenConsoleDir)\build\scripts\Merge-PriFiles.ps1&quot; -Path &quot;@(DependencyPriFiles, '&quot;, &quot;')&quot; -OutputPath &quot;$(OutDir)resources.pri&quot;" />
     <Touch Files="$(OutDir)\stamp" AlwaysCreate="true" />
   </Target>
+
   <Import Project="$(OpenConsoleDir)\build\rules\GenerateSxsManifestsFromWinmds.targets" />
   <Import Project="$(OpenConsoleDir)src\common.nugetversions.targets" />
+
 </Project>
