--- a/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
+++ b/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
@@ -47,8 +47,8 @@
     <ClInclude Include="NewActions.h">
       <DependentUpon>NewActions.xaml</DependentUpon>
     </ClInclude>
-    <ClInclude Include="ActionsTemplateSelectors.h">
-      <DependentUpon>ActionsTemplateSelectors.idl</DependentUpon>
+    <ClInclude Include="ArgsTemplateSelectors.h">
+      <DependentUpon>ArgsTemplateSelectors.idl</DependentUpon>
       <SubType>Code</SubType>
     </ClInclude>
     <ClInclude Include="EditAction.h">
@@ -236,8 +236,8 @@
     <ClCompile Include="NewActions.cpp">
       <DependentUpon>NewActions.xaml</DependentUpon>
     </ClCompile>
-    <ClCompile Include="ActionsTemplateSelectors.cpp">
-      <DependentUpon>ActionsTemplateSelectors.idl</DependentUpon>
+    <ClCompile Include="ArgsTemplateSelectors.cpp">
+      <DependentUpon>ArgsTemplateSelectors.idl</DependentUpon>
       <SubType>Code</SubType>
     </ClCompile>
     <ClCompile Include="EditAction.cpp">
@@ -360,7 +360,7 @@
       <DependentUpon>NewActions.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
-    <Midl Include="ActionsTemplateSelectors.idl">
+    <Midl Include="ArgsTemplateSelectors.idl">
       <SubType>Designer</SubType>
     </Midl>
     <Midl Include="EditAction.idl">
