--- a/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj.filters
+++ b/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj.filters
@@ -27,7 +27,7 @@
     <Midl Include="LaunchViewModel.idl" />
     <Midl Include="EnumEntry.idl" />
     <Midl Include="SettingContainer.idl" />
-    <Midl Include="ActionsTemplateSelectors.idl" />
+    <Midl Include="ArgsTemplateSelectors.idl" />
     <Midl Include="NewTabMenuViewModel.idl" />
   </ItemGroup>
   <ItemGroup>
